--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Akinito24 - Coming Soon</title>
+    <title>Website - Coming Soon</title>
     <style>
         body, html {
             margin: 0;
@@ -53,6 +53,7 @@
         <h2>Your Dream Property Awaits!</h2>
     </div>
 
+    // ThreeJS CDN
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script>
         const scene = new THREE.Scene();
